--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="mhrtyuio , games , download ">
+    <meta name="description" content="هذا الموقع خاص لجميع الالعاب مجانا ومصمم من قبل مهداوي عبد المعز ومرحبا بالجميع">
+    <meta name="keywords" content="mhrtyuio , games , download , wifi4games , pc games , freefire , mehdaoui , html , gta v , GTA V , GTA Egypt , blur">
+    <meta name="author" content="Abdelmouiz Mehdaoui">
     <link rel="stylesheet" href="style.css">
     <title>Mehdaoui Games</title>
     <link rel="icon" href="image.png">
