--- a/index.html
+++ b/index.html
@@ -155,6 +155,24 @@
         <p>من سيربح المليون</p>
     </section>        
         </a>
+        <a href="https://www.wifi4games.com/pc_games/Poly_Bridge.html">
+    <section>
+        <img src="https://www.wifi4games.com/img/pc_covers/260/798uZfW7R2278.jpg" alt="Poly Bridge">
+        <p>Poly Bridge</p>
+    </section>        
+        </a>
+        <a href="https://www.wifi4games.com/pc_games/Portal.html">
+    <section>
+        <img src="https://www.wifi4games.com/img/pc_covers/260/olMiEIMq3a55.jpg" alt="Portal">
+        <p>Portal</p>
+    </section>        
+        </a>
+        <a href="https://www.wifi4games.com/pc_games/UNRAVEL_TWO.html">
+    <section>
+        <img src="https://www.wifi4games.com/img/pc_covers/260/Xmt4cxXgIa498.jpg" alt="UNRAVEL TWO">
+        <p>UNRAVEL TWO</p>
+    </section>        
+        </a>
     </div>
     <h1 id="sports">Sports Games</h1>
     <div class="gtd">
@@ -170,8 +188,28 @@
         <p>FIFA 2019</p>
     </section>        
         </a>
+        <a href="https://www.wifi4games.com/pc_games/Pro_Evolution_Soccer_2015.html">
+    <section>
+        <img src="https://www.wifi4games.com/img/pc_covers/260/qw7bCBbwRv56.jpg" alt="pes2015">
+        <p>Pro Evolution Soccer 2015</p>
+    </section>        
+        </a>
+        <a href="https://www.wifi4games.com/pc_games/Fifa_2014.html">
+    <section>
+        <img src="https://www.wifi4games.com/img/pc_covers/260/GHMlLCEWQe251.jpg" alt="pes 2024">
+        <p>Fifa 2014</p>
+    </section>        
+        </a>
+        <a href="https://www.wifi4games.com/pc_games/eFootball_PES_2021.html">
+    <section>
+        <img src="https://www.wifi4games.com/img/pc_covers/260/wsMyh3Wz1o915.jpg" alt="pes 2021">
+        <p>eFootball PES 2021</p>
+    </section>        
+        </a>
     </div>
     <a href="#up" class="top-button">⬆️ Back to top</a>
-    <H1>DESIGNED BY MEHDAOUI</H1>
+    <div class="end-1">
+        <div class="end-2"><pre> هذا الموقع للالعاب عامة وخاصة العاب الكمبيوتر ومصمم من قبل مهداوي عبد المعز للتواصل يرجى الاتصال 0778082991</div>  
+    </div>
 </body>
 </html>
