--- a/pages/gtav.html
+++ b/pages/gtav.html
@@ -1,1 +1,52 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/gtav.css">
+    <title>Document</title>
+</head>
+<body>
+    <h1 dir="rtl" lang="ar">تحميل لعبة Grand Theft Auto V</h1>
+    <br><br>
+    <h1 dir="rtl">Game Gallery</h1>
+    <div class="game-gallery" dir="rtl">
+        <section class="gall">
+            <img src="https://www.wifi4games.com/img/pc_photos/750/AzoUu5ihoX817.jpg" alt="gta-v">
+        </section>
+    </div>
+    
+    <div class="link">
+        <section class="download">
+          <a href="https://www.wifi4games.com/pc_games/Grand_Theft_Auto_V.html">
+            <button>DOWNLOAD</button>
+          </a>
+          <hr>
+          <li>بحجم 36.1 غيغا بايت</li>
+          <li>مجانية</li>
+          <li>كاملة</li>
+          <li>خالية من الفيروسات</li>
+       </section>
+    </div>
+    <h3 class="h3" dir="rtl">حكاية اللعبة</h3>
+        <p class="story" dir="rtl" lang="ar">تتمحور قصة لعبة GTA V حول ثلاث شخصيات رئيسية باللعبة وهم مايكل وفرانكلين وتريفور (Michael-Trevor-Franklin) وهم عبارة عن مجرمين قصصهم مرتبطة ببعضها من خلال المهام التي يقوموا بتنفيذها سويا في مدينة (Los Santos) حيث بداخل اللعبة يوجد لكل شخصية طور قصة خاص به سوف تكتشفه بنفسك ولكن قصة كان مايكل & وتريفور كانتا مرتطبتين بالبداية حيث تدور اللعبة بالبداية بثلاث شخصيات كانوا يحاولون سرقة إحدي البنوك ومن ضمنهم مايكل وتريفور فبعد أن نجحوا بسرقة البنك وقاموا بالهرب معا بداخل سيارة كانت تنتظرهم بالخارج وبداخلها سائق تم قتله بواسطة الشرطة أثناء المطاردة إلى أن قاموا بالهرب من الشرطة للحظة ولكن الفرحة لم تكتمل فالسيارة تدمرت مما ترتب على أن يقوموا بالتوجه للطائرة سيرا ولكن كان هناك شخص مجهول ينتظرهم فقام بقنص صديقهم الثالث وأصيب مايكل أيضا بعيار ناري مما جعل تريفور يصرخ لأنه يري أعز أصدقائه بلحظاته الأخيرة وكان ينوي أن يقوم بمحاولة لقتل القناص ولكن تريفور منعه من ذلك وقال له اهرب بحياتك فنحن موتي لم يستطع تريفور الهرب فالشرطة قد هجمت عليهم وحصل اشتباك بين تريفور والشرطة مما جعا تريفور يأخذ إحدي سكان المدينه كرهينه له وهي مراه عجوز وقام بالهرب وأطلق سراحها ولم يستطع تريفور أن يأخذ حصته من المال المسروق نجا مايكل من إصابته وقام بتزييف موته وهو الآن يعيش مع أسرته ببرنامج حماية الشهود واختفي تريفور بمكان بعيد خارج مدينه (Los Santos) بصحراء جرداء لا زرع فيها ولا ماء وهذه كانت قصة شخصيتى مايكل وتريفور ببداية أحداث اللعبة</p>
+      <div class="reqs">
+        <section class="req">
+    <h3>الحد الادنى لمتطلبات التشغيل</h3>
+    <p class="CPU">المعالج: Intel Core 2 Quad CPU Q6600 @ 2.40GHz (4 CPUs) / AMD Phenom 9850 Quad-Core</p>
+    <p class="GPU">كرت الفيديو: NVIDIA 9800 GT 1GB / AMD HD 4870 1GB (DX 10, 10.1, 11)</p>
+    <p class="RAM">الرام: 4 GB</p>
+    <p></p>
+    <hr>
+    <h3> الحد الاعلى لمتطلبات التشغيل</h3>
+    <p class="CPU">المعالج: Intel Core i5 3470 @ 3.2GHz (4 CPUs) / AMD X8 FX-8350 @ 4GHz (8 CPUs)</p>
+    <p class="GPU">كرت الفيديو: NVIDIA GTX 660 2GB / AMD HD 7870 2GB</p>
+    <p class="RAM">الرام: 8 GB</p>
+    <p></p>
+        </section> 
+      </div> 
+      <div class="end-1">
+        <div class="end-2"><pre> هذا الموقع للالعاب عامة وخاصة العاب الكمبيوتر ومصمم من قبل مهداوي عبد المعز للتواصل يرجى الاتصال 0778082991</div>  
+    </div> 
+</body>
+</html>
