--- a/pages/gtav.html
+++ b/pages/gtav.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/gtav.css">
-    <title>Document</title>
+    <link rel="icon" href="../image.png">
+    <title>Gta V</title>
 </head>
 <body>
     <h1 dir="rtl" lang="ar">تحميل لعبة Grand Theft Auto V</h1>
