--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="هذا الموقع خاص لجميع الالعاب مجانا ومصمم من قبل مهداوي عبد المعز ومرحبا بالجميع">
-    <meta name="keywords" content="mhrtyuio , games , download , wifi4games , pc games , freefire , mehdaoui , html , gta v , GTA V , GTA Egypt , blur">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="description" content="موقع مهداوي عبد المعز لتحميل ألعاب الكمبيوتر مجانا مثل GTA و PES و Blur و Freefire. موقع خفيف وسريع بدون إعلانات مزعجة.">
+    <meta name="keywords" content="العاب, تحميل, مهداوي, GTA, PES, ألعاب مجانية, ألعاب كمبيوتر, wifi4games, games for pc">
     <meta name="author" content="Abdelmouiz Mehdaoui">
+    <link rel="canonical" href="https://achrafmeh.github.io/games/" />
     <link rel="stylesheet" href="style.css">
     <title>Mehdaoui Games</title>
     <link rel="icon" href="image.png">
