--- a/pages/gtav.html
+++ b/pages/gtav.html
@@ -14,6 +14,11 @@
     <div class="game-gallery" dir="rtl">
         <section class="gall">
             <img src="https://www.wifi4games.com/img/pc_photos/750/AzoUu5ihoX817.jpg" alt="gta-v">
+            <img src="https://www.wifi4games.com/img/pc_photos/750/bszaMbVPTJ697.jpg" alt="v1">
+            <img src="https://www.wifi4games.com/img/pc_photos/750/R4qXmImkxx732.jpg" alt="v2">
+            <img src="https://www.wifi4games.com/img/pc_photos/750/ORn9wSymt9937.jpg" alt="v3">
+            <img src="https://www.wifi4games.com/img/pc_photos/750/bpEVQZjCK2697.jpg" alt="v4">
+            <img src="https://www.wifi4games.com/img/pc_photos/750/a6bKNjUGoN310.jpg" alt="v5">
         </section>
     </div>
     
