--- a/pages/gtasa.html
+++ b/pages/gtasa.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1 dir="rtl" lang="ar">تحميل لعبة GTA SAN ANDREAS</h1>
+    <a class="logo" href="https://www.facebook.com/share/1C2GwYVetC/">
+      <img src="../img/facebook.svg" alt="logo" class="icon">
+    </a>
+    <a class="logo" href="https://www.instagram.com/mehdaoui_abdelmouiz/">
+      <img src="../img/instagram.svg" alt="logo2" class="icon">
+    </a>
     <br><br>
     <h1 dir="rtl">Game Gallery</h1>
     <div class="game-gallery" dir="rtl">
