--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </section>        
         </a>
     </div>
-    <a href="#up" class="top-button">⬆️ Back to top</a>
+    <a href="#up" class="top-button" >⬆️</a>
     <div class="end-1">
         <div class="end-2"><pre> هذا الموقع للالعاب عامة وخاصة العاب الكمبيوتر ومصمم من قبل مهداوي عبد المعز للتواصل يرجى الاتصال 0778082991</div>  
     </div>
