--- a/index.html
+++ b/index.html
@@ -149,6 +149,18 @@
         <p>Sniper Art of Victory</p>
     </section>        
         </a>
+        <a href="https://www.wifi4games.com/pc_games/Hollow_Knight_Godmaster.html">
+    <section>
+        <img src="https://www.wifi4games.com/img/pc_covers/260/OdwQTPAbtN981.jpg" alt="Hollow_Knight_Godmaster">
+        <p>Hollow Knight Godmaster</p>
+    </section>
+        </a>
+        <a href="https://www.wifi4games.com/pc_games/R.E.P.O.html">
+    <section>
+        <img src="https://www.wifi4games.com/img/pc_covers/260/GenQY4BS2O763.jpg" alt="R.E.P.O">
+        <p>R.E.P.O</p>
+    </section>   
+        </a>
     </div>
     <h1 id="Intelligence games">Intelligence Games</h1>
     <div class="gtd">
