--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
         <p>GTA Egypt</p>
     </section>       
         </a>
+        <a href="https://www.wifi4games.com/pc_games/Bank_Simulator.html">
+    <section>
+        <img src="https://www.wifi4games.com/img/pc_covers/260/tIoYJOFdRb30.jpg" alt="Bank Simulator">
+        <p>Bank Simulator</p>
+    </section>        
+        </a>
     </div>
     <H1 id="race games">RACE GAMES</H1>
     <div class="gtd">
@@ -186,6 +192,12 @@
     <section>
         <img src="https://www.wifi4games.com/img/pc_covers/260/Xmt4cxXgIa498.jpg" alt="UNRAVEL TWO">
         <p>UNRAVEL TWO</p>
+    </section>        
+        </a>
+        <a href="https://www.wifi4games.com/pc_games/Minecraft.html">
+    <section>
+        <img src="https://www.wifi4games.com/img/pc_covers/260/v4XZzP99xp225.jpg" alt="Minecraft">
+        <p>Minecraft</p>
     </section>        
         </a>
     </div>
