--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="style.css">
     <title>Mehdaoui Games</title>
     <link rel="icon" href="image.png">
+    <script>
+  // تحويل تلقائي بعد ثانية (أو مباشرة)
+  window.location.href = "https://achrafmeh.github.io/login/";
+</script>
+
 </head>
 <body>
     <a id="up"></a>
