--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script>
   // إذا المستخدم ما دخلش من قبل ➜ نوجهه لصفحة تسجيل الدخول
   if (!localStorage.getItem("loggedIn")) {
-    window.location.href = "https://achrafmeh.github.io/login";
+    window.location.href = "https://mouizmehdaoui.github.io/login/";
   }
 </script>
 </head>
