--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           justify-content: flex-end;
           align-items: center;
           padding: 10px 20px;
+          margin-bottom: 50px;
           background: rgba(255, 255, 255, 0.8);
           box-shadow: 0 2px 5px rgba(0,0,0,0.2);
           gap: 10px;
