--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="image.png">
   <style>
     
-    .login-header { display: flex; justify-content: flex-end; align-items: center; padding: 10px 20px; background: #fff; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+    .login-header { display: flex; justify-content: flex-end; margin-bottom: 20px; align-items: center; padding: 10px 20px; background: #fff; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
     .login-btn, .logout-btn { padding: 6px 15px; border: none; border-radius: 6px; cursor: pointer; color: #fff; }
     .login-btn { background-color: #4285F4; }
     .logout-btn { background-color: #e74c3c; }
