--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ footer a:hover {
 <footer>
   <p>© 2025 Mehdaoui Games | جميع الحقوق محفوظة.</p>
   <p>
-    <a href="#">سياسة الخصوصية</a> |
+    <a href="privacy.html">سياسة الخصوصية</a> |
     <a href="mailto:mehdaoui.contact@gmail.com">اتصل بنا</a> |
     <a href="https://facebook.com/achrafmeh" target="_blank">فيسبوك</a>
   </p>
