--- a/privacy.html
+++ b/privacy.html
@@ -65,7 +65,7 @@
 
   <h2>7. الاتصال بنا</h2>
   <p>إذا كانت لديك أي استفسارات، راسلنا عبر البريد:  
-    <a href="mailto:mehdaoui.contact@gmail.com">mehdaoui.contact@gmail.com</a>
+    <a href="mailto:kadermehdaoui179@gmail.com">kadermehdaoui179@gmail.com</a>
   </p>
 </div>
 
