--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ footer a:hover {
   <p>© 2025 Mehdaoui Games | جميع الحقوق محفوظة.</p>
   <p>
     <a href="privacy.html">سياسة الخصوصية</a> |
-    <a href="kadermehdaoui179@gmail.com">اتصل بنا</a> |
+    <a href="mailto:kadermehdaoui179@gmail.com">اتصل بنا</a> |
     <a href="https://facebook.com/Mehdaoui Abdelmouiz" target="_blank">فيسبوك</a>
   </p>
 </footer>
