--- a/index.html
+++ b/index.html
@@ -315,6 +315,12 @@ footer a:hover {
         <p>Minecraft</p>
     </section>        
         </a>
+        <a href="https://www.wifi4games.com/pc_games/ARK:_Ultimate_Survivor_Edition.html">
+    <section>
+          <img src="https://www.wifi4games.com/img/pc_covers/260/KgA2Roe7kK476.jpg" alt="ARK: Survival Evolved">
+          <p>ARK: Survival Evolvedv</p>
+    </section>
+        </a>
     </div>
     <h1 id="sports">Sports Games</h1>
     <div class="gtd">
